--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!---------------------------frist-part------------------------------ -->
     <header class="section_container header_container" id="home">
         <div class="header_image">
-            <img src="/images/home.11.jpg" alt="header">
+            <img src="./images/home.1.jpg" alt="header">
         </div>
         <div class="header_content">
             <div>
@@ -86,7 +86,7 @@
         </div>
         <div class="about_content">
             <div class="about_image">
-                <img src="/images/about.33.jpg" alt="about">
+                <img src="./images/about.33.jpg" alt="about">
             </div>
             <div class="about_grid">
                 <div class="about_card">
