--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="product_card">
                 <h4>Stackable Chair</h4>
                 <p>$87.00</p>
-                <img src="/images/product.2.webp" alt="">
+                <img src="./images/product.2.webp" alt="">
             </div>
             <div class="product_card">
                 <h4>Lamp tool</h4>
