--- a/index.html
+++ b/index.html
@@ -125,27 +125,27 @@
             <div class="product_card">
                 <h4>Lamp tool</h4>
                 <p>$35.00</p>
-                <img src="/images/product.lamp1.jpg" alt="">
+                <img src="./images/product.lamp1.jpg" alt="">
             </div>
             <div class="product_card">
                 <h4>Dining Chair</h4>
                 <p>$55.00</p>
-                <img src="/images/product.diningCh...jpg" alt="">
+                <img src="./images/product.diningCh...jpg" alt="">
             </div>
             <div class="product_card">
                 <h4>Hand Base Lamp</h4>
                 <p>$37.00</p>
-                <img src="/images/product.lamp4.jpg" alt="">
+                <img src="./images/product.lamp4.jpg" alt="">
             </div>
             <div class="product_card">
                 <h4>Styless Chair</h4>
                 <p>$45.00</p>
-                <img src="/images/product.styles.webp" alt="">
+                <img src="./images/product.styles.webp" alt="">
             </div>
             <div class="product_card">
                 <h4>Vintage chair</h4>
                 <p>$65.00</p>
-                <img src="/images/product.vintageCh...jpg" alt="">
+                <img src="./images/product.vintageCh...jpg" alt="">
             </div>
         </div>
     </section>
@@ -165,7 +165,7 @@
                     <!-- Slides -->
                     <div class="swiper-slide">
                         <div class="client_card">
-                            <img src="/images/client.2.avif" alt="user">
+                            <img src="./images/client.2.avif" alt="user">
                             <div>
                                 <p>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, mollitia eos. Dolorem
@@ -178,7 +178,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="client_card">
-                            <img src="/images/client.3.avif" alt="user">
+                            <img src="./images/client.3.avif" alt="user">
                             <div>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum sequi neque animi et
@@ -191,7 +191,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="client_card">
-                            <img src="/images/client.4.avif" alt="user">
+                            <img src="./images/client.4.avif" alt="user">
                             <div>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, facilis neque! Non
